feat: move section title to center

--- a/Portals/0/rich-content/loreal/3600522480228/css/style.css
+++ b/Portals/0/rich-content/loreal/3600522480228/css/style.css
@@ -839,7 +839,7 @@ body {
     gap: 50px;
   }
   #es-loreal.es-loreal .es-reasons__title {
-    text-align: left;
+    /* text-align: left; */
     margin-left: 30px;
   }
   #es-loreal.es-loreal .es-reasons__title--margin {
