fix: remove margin

--- a/Portals/0/rich-content/loreal/3600522480228/css/style.css
+++ b/Portals/0/rich-content/loreal/3600522480228/css/style.css
@@ -840,7 +840,7 @@ body {
   }
   #es-loreal.es-loreal .es-reasons__title {
     /* text-align: left; */
-    margin-left: 30px;
+    /* margin-left: 30px; */
   }
   #es-loreal.es-loreal .es-reasons__title--margin {
     margin-left: 40px;
