--- a/Portals/0/rich-content/loreal/3600522480228/css/style.css
+++ b/Portals/0/rich-content/loreal/3600522480228/css/style.css
@@ -1,68 +1,3 @@
-/* Gotham Black */
-@font-face {
-  font-family: 'Gotham Black';
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black/Gotham-Black-Regular.eot');
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black/Gotham-Black-Regular.eot?#iefix')
-      format('embedded-opentype'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black/Gotham-Black-Regular.woff2')
-      format('woff2'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black/Gotham-Black-Regular.woff')
-      format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-/* Gotham Black Italic */
-@font-face {
-  font-family: 'Gotham Black Italic';
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black-Italic/Gotham-Black-Italic.eot');
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black-Italic/Gotham-Black-Italic.eot?#iefix')
-      format('embedded-opentype'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black-Italic/Gotham-Black-Italic.woff2')
-      format('woff2'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Black-Italic/Gotham-Black-Italic.woff')
-      format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-/* Gotham Bold */
-@font-face {
-  font-family: 'Gotham Bold';
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Bold/Gotham-Bold.eot');
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Bold/Gotham-Bold.eot?#iefix')
-      format('embedded-opentype'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Bold/Gotham-Bold.woff2')
-      format('woff2'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Bold/Gotham-Bold.woff')
-      format('woff');
-  font-weight: 700;
-  font-style: normal;
-}
-/* Gotham Book */
-@font-face {
-  font-family: 'Gotham Book';
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Book/Gotham-Book-Regular.eot');
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Book/Gotham-Book-Regular.eot?#iefix')
-      format('embedded-opentype'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Book/Gotham-Book-Regular.woff2')
-      format('woff2'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Book/Gotham-Book-Regular.woff')
-      format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-/* Gotham Light */
-@font-face {
-  font-family: 'Gotham Light';
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Light/Gotham-Light.eot');
-  src: url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Light/Gotham-Light.eot?#iefix')
-      format('embedded-opentype'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Light/Gotham-Light.woff2')
-      format('woff2'),
-    url('https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/fonts/Gotham-Light/Gotham-Light.woff')
-      format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
 html,
 body {
   margin: 0;
@@ -70,7 +5,7 @@ body {
 }
 
 #es-loreal.es-loreal {
-  font-family: 'Gotham Book', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
@@ -88,7 +23,7 @@ body {
 #es-loreal.es-loreal h3,
 #es-loreal.es-loreal h4,
 #es-loreal.es-loreal h5 {
-  font-family: 'Gotham Book', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #111;
 }
 #es-loreal.es-loreal .es-kv__img {
@@ -117,20 +52,21 @@ body {
   font-weight: inherit;
   margin-bottom: 20px;
   text-align: center;
-  font-family: 'Gotham Book', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 29px;
   text-transform: uppercase;
 }
 #es-loreal.es-loreal .es-kv__title--red {
   display: block;
-  font-family: 'Gotham Black';
+  font-family: 'Roboto';
+  font-weight: bold;
   font-size: 56px;
   color: #eb0812;
 }
 #es-loreal.es-loreal .es-kv__title--strong {
-  font-family: 'Gotham Bold';
-  font-weight: 700;
+  font-family: 'Roboto';
+  font-weight: bold;
 }
 #es-loreal.es-loreal .es-kv__subtitle {
   display: block;
@@ -173,12 +109,13 @@ body {
   margin-bottom: 60px;
   font-size: 25px;
   color: #fff;
-  font-family: 'Gotham Light', sans-serif;
-  font-weight: normal;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   color: #fff;
 }
 #es-loreal.es-loreal .es-info__item {
-  font-family: 'Gotham Light', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   position: relative;
   font-size: 20px;
   color: #fff;
@@ -193,8 +130,7 @@ body {
   line-height: inherit;
   color: inherit;
   font-family: inherit;
-  font-weight: inherit;
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: auto;
   position: absolute;
   top: -60px;
@@ -222,11 +158,11 @@ body {
   margin-bottom: 60px;
   text-align: center;
   font-size: 25px;
-  font-family: 'Gotham Light', sans-serif;
-  font-weight: normal;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 #es-loreal.es-loreal .es-ingredients__title--bold {
-  font-family: 'Gotham Bold';
+  font-family: 'Roboto';
   font-weight: bold;
 }
 #es-loreal.es-loreal .es-ingredients__image {
@@ -247,7 +183,8 @@ body {
   font-weight: inherit;
   padding-bottom: 10px;
   font-size: 18px;
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   border-bottom: 4px solid #eb0812;
   text-transform: uppercase;
 }
@@ -269,8 +206,8 @@ body {
   margin-bottom: 60px;
   font-size: 22px;
   color: #fff;
-  font-family: 'Gotham Light', sans-serif;
-  font-weight: normal;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   color: #fff;
 }
 #es-loreal.es-loreal .es-reasons__item {
@@ -345,7 +282,7 @@ body {
   text-align: center;
 }
 #es-loreal.es-loreal .es-feedback__title strong {
-  font-family: 'Gotham Bold';
+  font-family: 'Roboto';
   font-weight: bold;
 }
 #es-loreal.es-loreal .es-feedback__items-group {
@@ -391,7 +328,8 @@ body {
   color: inherit;
   font-family: inherit;
   font-weight: inherit;
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   margin-bottom: 10px;
   text-transform: uppercase;
 }
@@ -423,7 +361,8 @@ body {
   text-align: center;
 }
 #es-loreal.es-loreal .es-slider__title--uppercase {
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   text-transform: uppercase;
 }
 #es-loreal.es-loreal .es-slider__wrapper {
@@ -645,7 +584,8 @@ body {
 #es-loreal.es-loreal .es-cross__packshot--1::before {
   position: absolute;
   content: '1';
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   color: #fbc2c4;
   font-size: 222px;
   top: 50px;
@@ -656,7 +596,8 @@ body {
 #es-loreal.es-loreal .es-cross__packshot--2::before {
   position: absolute;
   content: '2';
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   color: #f9999d;
   font-size: 222px;
   top: 50px;
@@ -667,7 +608,8 @@ body {
 #es-loreal.es-loreal .es-cross__packshot--3::before {
   position: absolute;
   content: '3';
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   color: #f5666c;
   font-size: 222px;
   top: -100px;
@@ -678,7 +620,8 @@ body {
 #es-loreal.es-loreal .es-cross__packshot--5::before {
   position: absolute;
   content: '2';
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   color: #f9999d;
   font-size: 222px;
   top: -100px;
@@ -689,7 +632,8 @@ body {
 #es-loreal.es-loreal .es-cross__packshot--6::before {
   position: absolute;
   content: '3';
-  font-family: 'Gotham Bold', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   color: #f5666c;
   font-size: 222px;
   top: -100px;
